--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
   </header>
 
   <!-- Start modal section -->
-  <div class="signup-modal-wrapper">
+  <div class="signup-modal-wrapper" id="signup-modal">
     <div class="modal">
       <div>
-        <i class="fa fa-2x fa-times"></i>
+        <i class="fa fa-2x fa-times" id="close-modal"></i>
       </div>
       <div id="signup-form">
         <h2>Sign up with Email</h2>
@@ -73,7 +73,7 @@
         <h3 id="tagline">Let's learn to code, learn to be creative!</h3>
       </div>
       <!-- Signup button -->
-      <span class="btn message">Start now!</span>
+      <span class="btn message signup-show">Start now!</span>
     </div>
   </div>
   <footer>
