--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <h1>LEARN TO CODE.<br>LEARN TO BE CREATIVE.</h1>
       <p>Progate is a web service where you can learn programming online.<br>We offer you a fully equipped coding environment to get you started.</p>
       <!-- Signup button -->
-      <div class="btn signup">Sign up with Email</div>
+      <div class="btn signup signup-show">Sign up with Email</div>
       <p>or</p>
       <div class="btn facebook"><span class="fa fa-facebook"></span>Sign up with Facebook</div>
       <div class="btn twitter"><span class="fa fa-twitter"></span>Sign up with Twitter</div>
